--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,55 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"</a>
+      <div class="header-divider">
+  
+      </div>
+  
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+           <h4>Contact</h4>
+          <address>
+           <p>555-555-5555<br>
+          hello@unplugged.com</p>
+          </address>
+        </div>
+        
+        <div class="social">
+          <h4>Social</h4>
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/" target="_blank"></a></p>
+              <p><a href="https://twitter.com/home?lang=en" target="_blank"></a></p>
+              <p><a href="https://www.instagram.com/" target="_blank"></a></p>
+              <!-- other social links here -->
+            </div>
+        </div>
+      </div> <!-- footer content ends-->
+    </div> <!-- footer content-wrapper ends-->
+  
+    <div class="copyright">
+      <p>Copyright 2022 | Unplugged </p>
+    </div>
+  </footer>
+
+  
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
