--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Unplugged Retreat</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -52,7 +53,8 @@
       <div class="content-wrapper">
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat
+          <p>
+            Find out when we are holding our next retreat
             and how your company or team can sign up!
           </p>
         </div>
@@ -67,6 +69,74 @@
       <!-- aside content wrapper ends -->
     </aside>
 
+    <section class="features">
+      <div class="content-wrapper">
+        <!-- Add your Features content here -->
+        <h2> Have the work week you always dreamed of - without the bad wifi.</h2>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description"> Located in a 
+            peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+          <article>
+            <p class="fontawsome-icon"></p>
+            <p class="features-item-description">12 private rooms with 
+            ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing
+            on demand meals - just like your team kitchen.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses,
+            incliding private beach 1/2 mile from bungalow.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to
+            manage your day to day activities so you all get a chance
+            to reset.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room
+            for times that you must wifi.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <div>
+            <h3>La Crue Bottling Co. October 2017.</h3>
+
+            <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis 
+            nostrud exercitation ullamco laboris nisi ut aliquip 
+            ex ea commodo consequat. Duis aute irure dolor in 
+            reprehenderit in voluptate velit esse cillum dolore
+            eu fugiat nulla pariatur. Excepteur sint occaecat 
+            cupidatat non proident, sunt in culpa qui officia 
+            deserunt mollit anim id est laborum.
+           </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
 </main> <!-- main wrapper -->
 
 <footer>
@@ -76,7 +146,8 @@
          <h4>Contact</h4>
         <address>
          <p>555-555-5555<br>
-        hello@unplugged.com</p>
+          hello@unplugged.com
+          </p>
         </address>
       </div>
       
@@ -99,6 +170,12 @@
 
 
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" 
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+crossorigin="anonymous"></script>
+<script>
+  window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+</script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 
