--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@
   
       <nav>
         <ul>
-          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="../faq/index.html">FAQ</a></li>
           <li><a href="index.html">About</a></li>
         </ul>
       </nav>
